<resources>
    <string name="app_name">CODEFEST-Calculator</string>


    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="eql">=</string>

    <string name="dot">.</string>

    <string name="clear">C</string>
    <string name="sin">Sin</string>
    <string name="e">e</string>
    <string name="pie">Pie</string>
    <string name="deg">Deg</string>

    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>

    <string name="title">CODEFEST - Calculator</string>
</resources>
